--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,16 +27,16 @@
             </div>
             <div class="col-md-4 mb-3">
                 <h5>Contact</h5>
-                <p>Email: <a href="mailto:najeebpatoana007@gmail.com" class="text-white">najeebpatoana007@gmail.com</a></p>
+                <p>Email: <a href="mailto:najeebpatoana007@gmail.com" class="text-white" style="text-decoration: none;">najeebpatoana007@gmail.com</a></p>
                 <p>Phone: +92 3430694964</p>
                 <p>Address:  Blood Bank, Jhang</p>
             </div>
             <div class="col-md-4 mb-3">
                 <h5>Follow Us</h5>
-                <a href="https://github.com/Najeeb-Patoana" target="_blank" class="text-white me-3">
+                <a href="https://github.com/Najeeb-Patoana" target="_blank" class="text-white me-3" style="text-decoration: none;">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="https://www.linkedin.com/in/najeeb-ullah-khan-7bab7625a/" target="_blank" class="text-white me-3">
+                <a href="https://www.linkedin.com/in/najeeb-ullah-khan-7bab7625a/" target="_blank" class="text-white me-3" style="text-decoration: none;">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
             </div>
